codepkg/objects/Faculty__c.object
<CustomObject>
    <fields>
        <fullName>CountOfStudents__c</fullName>
        <label>CountOfStudents</label>
        <summarizedField>Group__c.CountStudents__c</summarizedField>
        <summaryForeignKey>Group__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfWorkers__c</fullName>
        <label>CountOfWorkers</label>
        <summaryForeignKey>Worker__c.Faculty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dean_of_Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dean of Faculty</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>Facultys</relationshipLabel>
        <relationshipName>Facultys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Facultys</relationshipLabel>
        <relationshipName>Facultys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Faculty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facultys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>